--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -30,7 +30,7 @@
 		<button onclick="camera('materiali');">Materiali</button>
 		<button onclick="camera('energia');">Energia</button>
 		<button onclick="camera('acqua');">Acqua</button>
-		<button onclick="camera('riffiuti');">Riffiuti</button>
+		<button onclick="camera('riffiuti');">Rifiuti</button>
 		<button onclick="camera('supply_chain');">Supply Chain</button>
 		<button onclick="camera('mobilita');">Mobilita`</button>
 		<x3d width="100%" height="95%">
