--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="js/Update.js"></script>
 		<script type="text/javascript" src="js/Utils.js"></script>
 		<script type="text/javascript" src="js/SosLibrary.js"></script>
+                <script type="text/javascript" src="js/data-manager.js"></script>
 		<link rel="stylescheet" type="text/css" href="css/x3dom.css" />
 	</head>
 	<body bgcolor="#0E0E0E" style="margin: 0px; padding: 0px; height: 100%;">
@@ -38,10 +39,10 @@
 				<Group id="scene"></Group>
 				<Transform DEF="Lamp_TRANSFORM" translation="0 0 0">
 					<PointLight DEF="LA_Lamp"
-						ambientIntensity="0.7000"
+						ambientIntensity="0.9000"
 						color="1.0000 1.0000 1.0000"
 						intensity="0.5"
-						radius="150.0000"
+						radius="250.0000"
 						location="0 4 -2.5"
 					/>
 				</Transform>
