Creati i metodi di base per il caricamento e la gestione dei dati

--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -84,6 +84,13 @@
 		</x3d>
 	</body>
 	<script type="text/javascript">
+                var dataManager = new DataManager({
+                   events: {
+                       onReady: function(){
+                           console.log("Data manager is ready");
+                       }
+                   } 
+                });
 		loadResources();
 
 		function camera(name){
