--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -68,29 +68,36 @@
 				</Transform>
 				<Viewpoint DEF="acquaCamera" id="acquaCamera"
 					centerOfRotation="0 0 0"
-					position="-24 5 -14"
-					orientation="-1 0 0 0.7"
+					position="-12 0 -14"
+					orientation="-0.2 1 0.2 1.57"
 					fieldOfView="0.7"
 					set_bind="false"
 				/>
 				<Viewpoint DEF="materialiCamera" id="materialiCamera"
 					centerOfRotation="0 0 0"
-					position="10 -4 -4"
+					position="7 -4 -4"
 					orientation="0 -1 0 0.3"
 					fieldOfView="0.7"
 					set_bind="false"
 				/>
 				<Viewpoint DEF="innovazioneCamera" id="innovazioneCamera"
 					centerOfRotation="0 0 0"
-					position="10 -2 -4"
-					orientation="-1 0 0 0.5"
+					position="2 -7 10"
+					orientation="-0.3 -1 0 0.785"
 					fieldOfView="0.7"
 					set_bind="false"
 				/>
 				<Viewpoint DEF="governanceCamera" id="governanceCamera"
 					centerOfRotation="0 0 0"
-					position="1 -9 -7"
-					orientation="1 0 0 0.15"
+					position="-6 -5 0"
+					orientation="-1 0 0 0.15"
+					fieldOfView="0.7"
+					set_bind="false"
+				/>
+                                <Viewpoint DEF="rifiutiCamera" id="rifiutiCamera"
+					centerOfRotation="0 0 0"
+					position="-24 -6.3 -20"
+                                        orientation="-1 0 0 0.50"
 					fieldOfView="0.7"
 					set_bind="false"
 				/>
