--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -101,6 +101,41 @@
 					fieldOfView="0.7"
 					set_bind="false"
 				/>
+                                <Viewpoint DEF="supply_chainCamera" id="supply_chainCamera"
+					centerOfRotation="0 0 0"
+					position="-12 -6 10"
+                                        orientation="-0.3 1 0 0.785"
+					fieldOfView="0.7"
+					set_bind="false"
+				/>
+                                <Viewpoint DEF="energiaCamera" id="energiaCamera"
+					centerOfRotation="0 0 0"
+					position="-5 -6 20"
+                                        orientation="1 0 0 0.785"
+					fieldOfView="0.7"
+					set_bind="false"
+				/>
+                                <Viewpoint DEF="mobilitaCamera" id="mobilitaCamera"
+					centerOfRotation="0 0 0"
+					position="-5 10 10"
+                                        orientation="-1 0 0 0.785"
+					fieldOfView="0.7"
+					set_bind="false"
+				/>
+                                <Viewpoint DEF="pol_personaleCamera" id="pol_personaleCamera"
+					centerOfRotation="0 0 0"
+					position="2 5 -11"
+					orientation="-0.3 -1 -0.3 1.57"
+					fieldOfView="0.7"
+					set_bind="false"
+				/>
+                                <Viewpoint DEF="pol_studentiCamera" id="pol_studentiCamera"
+					centerOfRotation="0 0 0"
+					position="-6 -2 -4"
+					orientation="-1 0 0 0.5"
+					fieldOfView="0.7"
+					set_bind="false"
+				/>
 				<Viewpoint DEF="defaultCamera" id="defaultCamera"
 					centerOfRotation="0 0 0"
 					position="-5 1 40"
