--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -1,166 +1,166 @@
 <!-- DOCTYPE html -->
 <html style="margin: 0px; padding: 0px; height: 100%;">
-	<head>
-		<link rel="shortcut icon" href="http://www.web3d.org/x3d/content/examples/images/X3DtextIcon16.png" title="X3D"/>
-		<title>Example HTML page with X3D Scene</title>
-		<script type="text/javascript" src="js/x3dom.js"></script>
-		<script type="text/javascript" src="js/jquery.js"></script>
-                <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-                <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-		<script type="text/javascript" src="js/x3dresources.js"></script>
-                <script type="text/javascript" src="js/renderer.js"></script>
-		<script type="text/javascript" src="js/Setup.js"></script>
-		<script type="text/javascript" src="js/Update.js"></script>
-		<script type="text/javascript" src="js/Utils.js"></script>
-		<script type="text/javascript" src="js/SosLibrary.js"></script>
-                <script type="text/javascript" src="js/data-manager.js"></script>
-                <script type="text/javascript" src="js/Slider.js"></script>
-                <script type="text/javascript" src="js/Movement.js"></script>
-		<!--<link rel="stylesheet" type="text/css" href="css/x3dom.css" />-->
-                <link rel="stylesheet" type="text/css" href="css/interface.css" />
-	</head>
-	<body bgcolor="#0E0E0E" style="margin: 0px; padding: 0px; height: 100%;">
-		<button onclick="cameraHome();">Home</button>
-		<button onclick="cameraInnovazione();">Innovazione</button>
-		<button onclick="cameraGovernance();">Governance</button>
-		<button onclick="cameraPolitichePersonale();">Pol. Personale</button>
-		<button onclick="cameraPoliticheStudenti();">Pol. Studenti</button>
-		<button onclick="cameraMateriali();">Materiali</button>
-		<button onclick="cameraEnergia();">Energia</button>
-		<button onclick="cameraAcqua();">Acqua</button>
-		<button onclick="cameraRifiuti();">Rifiuti</button>
-		<button onclick="cameraSupplyChain();">Supply Chain</button>
-		<button onclick="cameraMobilita();">Mobilita`</button>
-                <button id="buttonInfo" onclick="$('#info').show();">Info </button>
-                <div id="popup">  
-                    <b id="tipo">Governance:</b>
-                    <p id="testo">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-                    <p id="nomeValore">Media Voti: <b><span id="valore"></span> / 10</b></p>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+        <link rel="shortcut icon" href="http://www.web3d.org/x3d/content/examples/images/X3DtextIcon16.png" title="X3D"/>
+        <title>Example HTML page with X3D Scene</title>
+        <script type="text/javascript" src="js/x3dom.js"></script>
+        <script type="text/javascript" src="js/jquery.js"></script>
+        <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+        <script type="text/javascript" src="js/x3dresources.js"></script>
+        <script type="text/javascript" src="js/renderer.js"></script>
+        <script type="text/javascript" src="js/Setup.js"></script>
+        <script type="text/javascript" src="js/Update.js"></script>
+        <script type="text/javascript" src="js/Utils.js"></script>
+        <script type="text/javascript" src="js/SosLibrary.js"></script>
+        <script type="text/javascript" src="js/data-manager.js"></script>
+        <script type="text/javascript" src="js/Slider.js"></script>
+        <script type="text/javascript" src="js/Movement.js"></script>
+        <!--<link rel="stylesheet" type="text/css" href="css/x3dom.css" />-->
+        <link rel="stylesheet" type="text/css" href="css/interface.css" />
+    </head>
+    <body bgcolor="#0E0E0E" style="margin: 0px; padding: 0px; height: 100%;">
+        <button onclick="cameraHome();">Home</button>
+        <button onclick="cameraInnovazione();">Innovazione</button>
+        <button onclick="cameraGovernance();">Governance</button>
+        <button onclick="cameraPolitichePersonale();">Pol. Personale</button>
+        <button onclick="cameraPoliticheStudenti();">Pol. Studenti</button>
+        <button onclick="cameraMateriali();">Materiali</button>
+        <button onclick="cameraEnergia();">Energia</button>
+        <button onclick="cameraAcqua();">Acqua</button>
+        <button onclick="cameraRifiuti();">Rifiuti</button>
+        <button onclick="cameraSupplyChain();">Supply Chain</button>
+        <button onclick="cameraMobilita();">Mobilita`</button>
+        <button id="buttonInfo" onclick="$('#info').show();">Info </button>
+        <div id="popup">  
+            <b id="tipo">Governance:</b>
+            <p id="testo">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            <p id="nomeValore">Media Voti: <b><span id="valore"></span> / 10</b></p>
 
-                    <input type="button" value="Chiudi" onclick="$('#popup').hide();" />
-                </div>
-                <div id="info">  
-                    <b>Informazioni</b>
-                    <p id="testo">Premi i bottoni nella barra superiore per spostarti tra le varie telecamere. <br/> Usa la barra nella zona bassa dello schermo per selezionare l'anno.</p>
-                    <input type="button" value="Chiudi" onclick="$('#info').hide();" />
-                </div>
-                <form id="barra">
-                <label for="anni">Selezionare anno</label>
-                    <select name="anni" id="anni">
-                        <option value="2010">2010</option>
-                        <option value="2011">2011</option>
-                        <option value="2012" selected="">2012</option>
-                    </select>
-                </form>
-    
-		<x3d width="100%" height="95%">
-                        
-			<Scene>
-				<Group id="scene"></Group>
-				<Transform DEF="Lamp_TRANSFORM" translation="0 0 0">
-					<PointLight DEF="LA_Lamp"
-						ambientIntensity="0.9000"
-						color="1.0000 1.0000 1.0000"
-						intensity="0.5"
-						radius="250.0000"
-						location="0 4 -2.5"
-					/>
-				</Transform>
-				<Viewpoint DEF="acquaCamera" id="acquaCamera"
-					centerOfRotation="0 0 0"
-					position="-12 0 -14"
-					orientation="-0.2 1 0.2 1.57"
-					fieldOfView="0.7"
-					set_bind="false"
-				/>
-				<Viewpoint DEF="materialiCamera" id="materialiCamera"
-					centerOfRotation="0 0 0"
-					position="7 -4 -4"
-					orientation="0 -1 0 0.3"
-					fieldOfView="0.7"
-					set_bind="false"
-				/>
-				<Viewpoint DEF="innovazioneCamera" id="innovazioneCamera"
-					centerOfRotation="0 0 0"
-					position="2 -7 10"
-					orientation="-0.3 -1 0 0.785"
-					fieldOfView="0.7"
-					set_bind="false"
-				/>
-				<Viewpoint DEF="governanceCamera" id="governanceCamera"
-					centerOfRotation="0 0 0"
-					position="-6 -5 0"
-					orientation="-1 0 0 0.15"
-					fieldOfView="0.7"
-					set_bind="false"
-				/>
-                                <Viewpoint DEF="rifiutiCamera" id="rifiutiCamera"
-					centerOfRotation="0 0 0"
-					position="-24 -6.3 -20"
-                                        orientation="-1 0 0 0.50"
-					fieldOfView="0.7"
-					set_bind="false"
-				/>
-                                <Viewpoint DEF="supply_chainCamera" id="supply_chainCamera"
-					centerOfRotation="0 0 0"
-					position="-12 -6 10"
-                                        orientation="-0.3 1 0 0.785"
-					fieldOfView="0.7"
-					set_bind="false"
-				/>
-                                <Viewpoint DEF="energiaCamera" id="energiaCamera"
-					centerOfRotation="0 0 0"
-					position="-5 -6 20"
-                                        orientation="1 0 0 0.785"
-					fieldOfView="0.7"
-					set_bind="false"
-				/>
-                                <Viewpoint DEF="mobilitaCamera" id="mobilitaCamera"
-					centerOfRotation="0 0 0"
-					position="-5 10 10"
-                                        orientation="-1 0 0 0.785"
-					fieldOfView="0.7"
-					set_bind="false"
-				/>
-                                <Viewpoint DEF="pol_personaleCamera" id="pol_personaleCamera"
-					centerOfRotation="0 0 0"
-					position="2 5 -11"
-					orientation="-0.3 -1 -0.3 1.57"
-					fieldOfView="0.7"
-					set_bind="false"
-				/>
-                                <Viewpoint DEF="pol_studentiCamera" id="pol_studentiCamera"
-					centerOfRotation="0 0 0"
-					position="-6 -2 -4"
-					orientation="-1 0 0 0.5"
-					fieldOfView="0.7"
-					set_bind="false"
-				/>
-				<Viewpoint DEF="defaultCamera" id="defaultCamera"
-					centerOfRotation="0 0 0"
-					position="-5 1 40"
-					fieldOfView="0.7"
-					set_bind="false"
-				/>
-                                <!--<navigationInfo headlight='false' type='"NONE"'></navigationInfo>-->
-			</Scene>
-		</x3d>
-	</body>
-	<script type="text/javascript">
-                window.focused = "defaultCamera";
-                window.renderer = new Renderer({factor: 3});
-                window.dataManager = new DataManager({
-                   events: {
-                       onReady: function(){
-                           console.log("Data manager is ready");
-                           renderer.render(dataManager,$("#anni").val());
-                       }
-                   } 
-                });
+            <input type="button" value="Chiudi" onclick="$('#popup').hide();" />
+        </div>
+        <div id="info">  
+            <b>Informazioni</b>
+            <p id="testo">Premi i bottoni nella barra superiore per spostarti tra le varie telecamere. <br/> Usa la barra nella zona bassa dello schermo per selezionare l'anno.</p>
+            <input type="button" value="Chiudi" onclick="$('#info').hide();" />
+        </div>
+        <form id="barra">
+        <label for="anni">Selezionare anno</label>
+            <select name="anni" id="anni">
+                <option value="2010">2010</option>
+                <option value="2011">2011</option>
+                <option value="2012" selected="">2012</option>
+            </select>
+        </form>
 
-		function camera(name){
-			var camera = document.getElementById(name + "Camera");
-			camera.setAttribute("set_bind","true");
-		}
-	</script>
+        <x3d width="100%" height="95%">
+            <Scene>
+                <Group id="scene"></Group>
+                <Transform DEF="Lamp_TRANSFORM" translation="0 0 0">
+                    <PointLight DEF="LA_Lamp"
+                            ambientIntensity="0.9000"
+                            color="1.0000 1.0000 1.0000"
+                            intensity="0.5"
+                            radius="250.0000"
+                            location="0 4 -2.5"
+                    />
+                </Transform>
+                <Viewpoint DEF="acquaCamera" id="acquaCamera"
+                        centerOfRotation="0 0 0"
+                        position="-12 0 -14"
+                        orientation="-0.2 1 0.2 1.57"
+                        fieldOfView="0.7"
+                        set_bind="false"
+                />
+                <Viewpoint DEF="materialiCamera" id="materialiCamera"
+                        centerOfRotation="0 0 0"
+                        position="7 -4 -4"
+                        orientation="0 -1 0 0.3"
+                        fieldOfView="0.7"
+                        set_bind="false"
+                />
+                <Viewpoint DEF="innovazioneCamera" id="innovazioneCamera"
+                        centerOfRotation="0 0 0"
+                        position="2 -7 10"
+                        orientation="-0.3 -1 0 0.785"
+                        fieldOfView="0.7"
+                        set_bind="false"
+                />
+                <Viewpoint DEF="governanceCamera" id="governanceCamera"
+                        centerOfRotation="0 0 0"
+                        position="-6 -5 0"
+                        orientation="-1 0 0 0.15"
+                        fieldOfView="0.7"
+                        set_bind="false"
+                />
+                <Viewpoint DEF="rifiutiCamera" id="rifiutiCamera"
+                        centerOfRotation="0 0 0"
+                        position="-24 -6.3 -20"
+                        orientation="-1 0 0 0.50"
+                        fieldOfView="0.7"
+                        set_bind="false"
+                />
+                <Viewpoint DEF="supply_chainCamera" id="supply_chainCamera"
+                        centerOfRotation="0 0 0"
+                        position="-12 -6 10"
+                        orientation="-0.3 1 0 0.785"
+                        fieldOfView="0.7"
+                        set_bind="false"
+                />
+                <Viewpoint DEF="energiaCamera" id="energiaCamera"
+                        centerOfRotation="0 0 0"
+                        position="-5 -6 20"
+                        orientation="1 0 0 0.785"
+                        fieldOfView="0.7"
+                        set_bind="false"
+                />
+                <Viewpoint DEF="mobilitaCamera" id="mobilitaCamera"
+                        centerOfRotation="0 0 0"
+                        position="-5 10 10"
+                        orientation="-1 0 0 0.785"
+                        fieldOfView="0.7"
+                        set_bind="false"
+                />
+                <Viewpoint DEF="pol_personaleCamera" id="pol_personaleCamera"
+                        centerOfRotation="0 0 0"
+                        position="2 5 -11"
+                        orientation="-0.3 -1 -0.3 1.57"
+                        fieldOfView="0.7"
+                        set_bind="false"
+                />
+                <Viewpoint DEF="pol_studentiCamera" id="pol_studentiCamera"
+                        centerOfRotation="0 0 0"
+                        position="-6 -2 -4"
+                        orientation="-1 0 0 0.5"
+                        fieldOfView="0.7"
+                        set_bind="false"
+                />
+                <Viewpoint DEF="defaultCamera" id="defaultCamera"
+                        centerOfRotation="0 0 0"
+                        position="-5 1 40"
+                        fieldOfView="0.7"
+                        set_bind="false"
+                />
+                <!--<navigationInfo headlight='false' type='"NONE"'></navigationInfo>-->
+            </Scene>
+        </x3d>
+    </body>
+    <script type="text/javascript">
+        window.focused = "defaultCamera";
+        window.renderer = new Renderer({factor: 3});
+        window.dataManager = new DataManager({
+           events: {
+               onReady: function(){
+                   console.log("Data manager is ready");
+                   renderer.render(dataManager,$("#anni").val());
+               }
+           } 
+        });
+
+        function camera(name){
+            var camera = document.getElementById(name + "Camera");
+            camera.setAttribute("set_bind","true");
+        }
+    </script>
 </html>
