--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -56,7 +56,7 @@
 
         <x3d width="100%" height="95%">
             <Scene>
-                <Group id="scene"></Group>
+                <Group id="scene" Antialiased="True"></Group>
                 <Transform DEF="Lamp_TRANSFORM" translation="0 0 0">
                     <PointLight DEF="LA_Lamp"
                             ambientIntensity="0.9000"
