--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -54,7 +54,7 @@
             </select>
         </form>
 
-        <x3d width="100%" height="95%">
+        <x3d width="100%" height="95%" Antialiased="True">
             <Scene>
                 <Group id="scene" Antialiased="True"></Group>
                 <Transform DEF="Lamp_TRANSFORM" translation="0 0 0">
