--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -96,8 +96,8 @@
                 />
                 <Viewpoint DEF="rifiutiCamera" id="rifiutiCamera"
                         centerOfRotation="0 0 0"
-                        position="-24 -6.3 -20"
-                        orientation="-1 0 0 0.50"
+                        position="-20 -7 -19"
+                        orientation="-1 1 0 0.50"
                         fieldOfView="0.7"
                         set_bind="false"
                 />
@@ -142,7 +142,7 @@
                         fieldOfView="0.7"
                         set_bind="false"
                 />
-                <!--<navigationInfo headlight='false' type='"NONE"'></navigationInfo>-->
+                <navigationInfo headlight='false' type='"NONE"'></navigationInfo>
             </Scene>
         </x3d>
     </body>
