--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -56,6 +56,29 @@
 
         <x3d width="100%" height="95%" Antialiased="True">
             <Scene>
+                <Group id="preload" render="false">
+                    <inline DEF="preload_libro" url="models/libro.x3d"></inline>
+                    <inline DEF="preload_albero" url="models/Albero.x3d"></inline>
+                    <inline DEF="preload_barile" url="models/barile.x3d"></inline>
+                    <inline DEF="preload_macchina" url="models/Macchina2.x3d"></inline>
+                    <inline DEF="preload_autobus" url="models/Autobus.x3d"></inline>
+                    <inline DEF="preload_robot" url="models/robot.x3d"></inline>
+                    <inline DEF="preload_lampada" url="models/lampada.x3d"></inline>
+                    <inline DEF="preload_studenteverde" url="models/studenteVerde.x3d"></inline>
+                    <inline DEF="preload_studenterosso" url="models/studenteRosso.x3d"></inline>
+                    <inline DEF="preload_foglietto" url="models/Foglietto.x3d"></inline>
+                    <inline DEF="preload_muro" url="models/wall.x3d"></inline>
+                    <inline DEF="preload_tunnel" url="models/tunnel.x3d"></inline>
+                    <inline DEF="preload_soffitto" url="models/soffitto.x3d"></inline>
+                    <inline DEF="preload_pavimento" url="models/pavimento.x3d"></inline>
+                    <inline DEF="preload_libreria" url="models/libreria.x3d"></inline>
+                    <inline DEF="preload_lavello" url="models/lavello1.x3d"></inline>
+                    <inline DEF="preload_acqua" url="models/water.x3d"></inline>
+                    <inline DEF="preload_cestino1" url="models/Cestino.x3d"></inline>
+                    <inline DEF="preload_cestino2" url="models/Cestino2.x3d"></inline>
+                    <inline DEF="preload_universita" url="models/universita2.x3d"></inline>
+                    <inline DEF="preload_cartellini" url="models/Cartellini.x3d"></inline>
+                </Group>
                 <Group id="scene" render="false"></Group>
                 <Transform DEF="Lamp_TRANSFORM" translation="0 0 0">
                     <PointLight DEF="LA_Lamp"
