--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -38,12 +38,12 @@
             <p id="testo">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
             <p id="nomeValore">Media Voti: <b><span id="valore"></span> / 10</b></p>
 
-            <input type="button" value="Chiudi" onclick="$('#popup').hide();" />
+            <input type="button" value="Chiudi" onclick="$('#popup').hide(); window.focused = undefined;" />
         </div>
         <div id="info">  
             <b>Informazioni</b>
             <p id="testo">Premi i bottoni nella barra superiore per spostarti tra le varie telecamere. <br/> Usa la barra nella zona bassa dello schermo per selezionare l'anno.</p>
-            <input type="button" value="Chiudi" onclick="$('#info').hide();" />
+            <input type="button" value="Chiudi" onclick="$('#info').hide(); " />
         </div>
         <form id="barra">
         <label for="anni">Selezionare anno</label>
