--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -60,7 +60,7 @@
                     <inline DEF="preload_libro" url="models/libro.x3d"></inline>
                     <inline DEF="preload_albero" url="models/Albero.x3d"></inline>
                     <inline DEF="preload_barile" url="models/barile.x3d"></inline>
-                    <inline DEF="preload_macchina" url="models/Macchina2.x3d"></inline>
+                    <inline DEF="preload_macchina" url="models/Macchina.x3d"></inline>
                     <inline DEF="preload_autobus" url="models/Autobus.x3d"></inline>
                     <inline DEF="preload_robot" url="models/robot.x3d"></inline>
                     <inline DEF="preload_lampada" url="models/lampada.x3d"></inline>
@@ -72,11 +72,11 @@
                     <inline DEF="preload_soffitto" url="models/soffitto.x3d"></inline>
                     <inline DEF="preload_pavimento" url="models/pavimento.x3d"></inline>
                     <inline DEF="preload_libreria" url="models/libreria.x3d"></inline>
-                    <inline DEF="preload_lavello" url="models/lavello1.x3d"></inline>
+                    <inline DEF="preload_lavello" url="models/lavello.x3d"></inline>
                     <inline DEF="preload_acqua" url="models/water.x3d"></inline>
                     <inline DEF="preload_cestino1" url="models/Cestino.x3d"></inline>
                     <inline DEF="preload_cestino2" url="models/Cestino2.x3d"></inline>
-                    <inline DEF="preload_universita" url="models/universita2.x3d"></inline>
+                    <inline DEF="preload_universita" url="models/universita.x3d"></inline>
                     <inline DEF="preload_cartellini" url="models/Cartellini.x3d"></inline>
                 </Group>
                 <Group id="scene" render="false"></Group>
