--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -32,7 +32,7 @@
         <button onclick="cameraRifiuti();">Rifiuti</button>
         <button onclick="cameraSupplyChain();">Supply Chain</button>
         <button onclick="cameraMobilita();">Mobilita`</button>
-        <button id="buttonInfo" onclick="$('#info').show();">Info </button>
+        <button id="buttonInfo" onclick="$('#info').show();">Guida </button>
         <div id="popup">  
             <b id="tipo">Governance:</b>
             <p id="testo">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
@@ -41,8 +41,8 @@
             <input type="button" value="Chiudi" onclick="$('#popup').hide(); window.focused = undefined;" />
         </div>
         <div id="info">  
-            <b>Informazioni</b>
-            <p id="testo">Premi i bottoni nella barra superiore per spostarti tra le varie telecamere. <br/> Usa la barra nella zona bassa dello schermo per selezionare l'anno.</p>
+            <b>Guida</b>
+            <p id="testo">Premi i bottoni nella barra superiore per spostarti tra le varie telecamere. <br/> Usa la barra nella zona bassa dello schermo per selezionare l'anno. <br/> Clicca su un elemento per informazioni dettagliate sui dati disponibili.</p>
             <input type="button" value="Chiudi" onclick="$('#info').hide(); " />
         </div>
         <form id="barra">
