--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -21,6 +21,9 @@
         <link rel="stylesheet" type="text/css" href="css/interface.css" />
     </head>
     <body bgcolor="#0E0E0E" style="margin: 0px; padding: 0px; height: 100%;">
+        <audio id="soundMobilita" >
+            <source src="sounds\bus.mp3" type="audio/mpeg">
+        </audio>
         <button onclick="cameraHome();">Home</button>
         <button onclick="cameraInnovazione();">Innovazione</button>
         <button onclick="cameraGovernance();">Governance</button>
