--- a/SitoIUM/index.html
+++ b/SitoIUM/index.html
@@ -1,4 +1,4 @@
-<!-- DOCTYPE html -->
+<!DOCTYPE html>
 <html style="margin: 0px; padding: 0px; height: 100%;">
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -21,9 +21,6 @@
         <link rel="stylesheet" type="text/css" href="css/interface.css" />
     </head>
     <body bgcolor="#0E0E0E" style="margin: 0px; padding: 0px; height: 100%;">
-        <audio id="soundMobilita" >
-            <source src="sounds\bus.mp3" type="audio/mpeg">
-        </audio>
         <button onclick="cameraHome();">Home</button>
         <button onclick="cameraInnovazione();">Innovazione</button>
         <button onclick="cameraGovernance();">Governance</button>
@@ -59,6 +56,14 @@
 
         <x3d width="100%" height="95%" Antialiased="True">
             <Scene>
+                <Transform id="loading" translation="-4 0 0" scale="2 2 2">
+                    <Shape>
+                        <Appearance>
+                        <Material deffuseColor="1 1 1" ambientIntensity="1"/> 
+                        </Appearance> 
+                        <Text string='"Caricamento 0% ..."'/>
+                    </Shape>
+                </Transform>
                 <Group id="preload" render="false">
                     <inline DEF="preload_libro" url="models/libro.x3d"></inline>
                     <inline DEF="preload_albero" url="models/Albero.x3d"></inline>
@@ -173,24 +178,29 @@
         </x3d>
     </body>
     <script type="text/javascript">
-        window.focused = "defaultCamera";
-        window.renderer = new Renderer({factor: 3});
-        window.dataManager = new DataManager({
-           events: {
-               onReady: function(){
-                   console.log("Data manager is ready");
-                   renderer.render(dataManager,$("#anni").val());
-               }
-           } 
+        $(document).ready(function(){
+            window.focused = "defaultCamera";
+            window.renderer = new Renderer({factor: 3});
+            window.dataManager = new DataManager({
+               events: {
+                   onReady: function(){
+                        renderer.render(dataManager,$("#anni").val());
+                        $("#loading").attr("render",false);
+                        $("#scene").attr("render",true);
+                   },
+                   onResourceLoaded: function(data){
+                        $("#loading text").attr(
+                            "string",
+                            "Caricamento " + Math.round((data.loaded/data.total) * 100) + "% ..."
+                        );
+                   }
+               } 
+            });
         });
 
         function camera(name){
             var camera = document.getElementById(name + "Camera");
             camera.setAttribute("set_bind","true");
         }
-        
-        $(document).ready(function(){
-           $("#scene").attr("render",true);
-        });
     </script>
 </html>
